[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
log = { version = "0.4.21", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
